--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
         <div class="box">
           <label for="age">How old are You?:
             <input type="number"
-            id="age" value="12"
+            id="age"
+            value="12"
             min="1"
             max="199">
           </label>
